@@ -7,6 +7,9 @@ data dictionaries.  Also included is a utility to sort data dictionaries by base
 
 .. versionadded:: 0.5.0
 
+.. versionchanged:: 1.0.1
+	Added the plotGriddedImage() function
+
 .. versionchanged:: 1.0.0
 	Added support for UVFITS files and CASA measurement sets
 """
@@ -34,7 +37,7 @@ from lsl.common.constants import c as vLight
 
 __version__ = '0.4'
 __revision__ = '$Rev$'
-__all__ = ['baselineOrder', 'sortDataDict', 'pruneBaselineRange', 'rephaseData', 'CorrelatedData', 'CorrelatedDataIDI', 'CorrelatedDataUV', 'CorrelatedDataMS', 'buildGriddedImage', '__version__', '__revision__', '__all__']
+__all__ = ['baselineOrder', 'sortDataDict', 'pruneBaselineRange', 'rephaseData', 'CorrelatedData', 'CorrelatedDataIDI', 'CorrelatedDataUV', 'CorrelatedDataMS', 'buildGriddedImage', 'plotGriddedImage', '__version__', '__revision__', '__all__']
 
 
 # Regular expression for trying to get the stand number out of an antenna
@@ -1117,3 +1120,27 @@ def buildGriddedImage(dataDict, MapSize=80, MapRes=0.50, MapWRes=0.10, pol='xx',
 		sys.stdout = sys.__stdout__
 	
 	return im
+
+
+def plotGriddedImage(ax, gimg, interpolation='nearest', **kwargs):
+	"""
+	Given a blank matplotlib axes instance and a gridded image generated by 
+	the buildGriddedImage() function, plot the image on the axes and setup
+	the basic coordinate system.  This function returns the NumPy array of
+	the image that is plotted.
+	
+	.. versionadded:: 1.0.1
+	"""
+	
+	# Build the unshifted image
+	img = gimg.image()
+	
+	# Shift the image so that it is centered in the frame
+	imgSize = img.shape[0]	# should be square
+	img = numpy.roll(img, imgSize/2, axis=0)
+	img = numpy.roll(img, imgSize/2, axis=1)
+	
+	# Plot
+	ax.imshow(img, extent=(1,-1,-1,1), origin='lower', interpolation=interpolation, **kwargs)
+	
+	return img
