@@ -23,6 +23,8 @@
   * Updated the lsl.imaging.utils module to better deal with sparse FITS IDI/UVFITS files
   * Added support for the new MCS beam-dipole mode via the SDF keyword OBS_BDM
   * Various fixes to the lsl.imaging.deconv module
+  * Added a plotting helper function to lsl.imaging.utils
+  * Added a new overlay module for images called lsl.imaging.overlay
 
 1.0.0
   * Added in LWA Development Primitives module (lsl.reader.ldp)
